# PubMed-MeSH-to-KG

./: Cargo.toml  README.md  flake.nix
crates/mesh/: Cargo.toml  README.md
crates/mesh/examples/: simple.rs
crates/mesh/src/: error.rs  lib.rs  streaming.rs
crates/mesh/src/descriptor/: mod.rs  models.rs
crates/mesh/src/pharmacologial_action/: mod.rs  models.rs
crates/mesh/src/qualifier/: mod.rs  models.rs
crates/mesh/src/supplemental/: mod.rs  models.rs
crates/pubmed/: Cargo.toml  README.md
crates/pubmed/examples/: processor.rs  simple.rs
crates/pubmed/src/: error.rs  lib.rs
crates/pubmed/src/chunks/: mod.rs
crates/pubmed/src/chunks/models/: mod.rs  processor.rs  textml.rs
nix/: package.nix
src/: main.rs  saver.rs
src/saver/: mesh.rs  mod.rs  pubmed.rs
