[package]
name = "pm2kg"
version = "0.1.0"
edition = "2024"
authors = [
  "c2fc2f <contact@c2fc2f.com>"
]
description = "Converts the PubMed dataset into a CSV-based Knowledge Graph for Neo4j"
readme = "README.md"
repository = "https://github.com/c2fc2f/BioASQ-MeSH-to-KG"
license = "MIT"
keywords = [
  "pubmed", 
  "mesh", 
  "knowledge-graph", 
  "neo4j", 
]
categories = [
  "command-line-utilities", 
  "database"
]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
pubmed = { path = "crates/pubmed/" }
