[package]
name = "pm2kg"
version = "0.1.0"
edition = "2024"
authors = [
  "c2fc2f <contact@c2fc2f.com>"
]
description = "Converts the PubMed and MeSH dataset into a CSV-based Knowledge Graph for Neo4j"
readme = "README.md"
repository = "https://github.com/c2fc2f/PubMed-MeSH-to-KG"
license = "MIT"
keywords = [
  "pubmed", 
  "mesh", 
  "knowledge-graph", 
  "neo4j", 
]
categories = [
  "command-line-utilities", 
  "database"
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[features]
default = []
debug_path = [
  "pubmed/debug_path",
  "mesh/debug_path"
]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
mimalloc = { version = "0.1", features = ["v3"] }
futures = "0.3"
pubmed = { path = "crates/pubmed/" }
mesh = { path = "crates/mesh/" }
csv = "1"
dirs = "6"
fxhash = "0.2"
